--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
+    "eslint-plugin-node": "^11.1.0",
     "nodemon": "^3.0.1"
   }
 }
