--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "luxon": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
