--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.5.0",
     "passport": "^0.6.0",
+    "passport-custom": "^1.1.1",
     "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
   },
